2008-02-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: Add audio/x-ms-wma
	to the mime-types, allows playback on
	http://cbn.globoradio.globo.com/cbn/comentarios/arnaldojabor.asp
	(Closes: #515914)

============ Version 2.21.93

2008-02-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.93

2008-02-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (on_movie_menu_select): Fix thinko that
	caused DVD/CD devices not to appear in the movie menu
	* src/totem.c: (totem_action_load_media):
	Fix error messages for the unsupported and missing channels.conf
	error cases

2008-02-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (update_dvb_menu_items): Fix stupidness

2008-02-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (update_dvb_menu_items):
	Better menu item label for the DVB items, don't translate
	strings we don't need to (Closes: #515593)

2008-02-10  Bastien Nocera  <hadess@hadess.net>

	Patch from Zaheer Abbas Merali <zaheermerali@gmail.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_channels_file),
	(bacon_video_widget_can_play),
	(bacon_video_widget_dvb_get_adapter_type),
	(bacon_video_widget_get_mrls):
	Add support for listing DVB channels from the channels.conf
	file, with DVB type-specific filtering

	* src/totem-menu.c: (on_play_dvb_activate),
	(update_drives_menu_items), (update_dvb_menu_items),
	(on_movie_menu_select): Add DVB cards to the Movie menu

2008-02-10  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Really fix compile failure, spotted by Jens Granseuer
	<jensgr@gmx.net> (Closes: #514391)

2008-02-09  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (totem_action_load_media),
	(totem_action_toggle_aspect_ratio): Fix some compile warnings.

2008-02-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_set_logo_by_name):